[package]
name = "hulunbuir"
version = "0.2.1"
authors = ["whoiscc <correctizer@gmail.com>"]
edition = "2018"

description = "Multi-allocator single-collector thread-safe GC"
repository = "https://github.com/whoiscc/hulunbuir"
readme = "README.md"
license = "MIT"

[dependencies]
crossbeam = "^0.7.2"

[dev-dependencies]
rand = "^0.7"
