[package]
name = "hulunbuir"
version = "0.2.3"
authors = ["whoiscc <correctizer@gmail.com>"]
edition = "2018"

description = "General purpose cross-thread GC"
repository = "https://github.com/whoiscc/hulunbuir"
readme = "README.md"
license = "MIT"

[dependencies]
crossbeam = "^0.7.2"
failure = "^0.1.5"
failure_derive = "^0.1.1"
log = "^0.4.8"

[dev-dependencies]
rand = "^0.7"
env_logger = "^0.6.2"
